
- Added lexers:

  * GAP session (#2211)

- Updated lexers:

  * C family (C, C++ and many others): fix an issue where a chunk would
    be wrongly recognized as a function definition due to braces in
    comments (#2210)
  * Inform 6: fix lexing of properties and doubles (#2214)
  * NASM: add support for SSE/AVX/AVX-512 registers as well as 'rel'
    and 'abs' address operators (#2212)

- Fix `make mapfiles` when Pygments is not installed in editable mode
  (#2223)

Version 2.13.0
--------------
(released August 15th, 2022)

- Added lexers:

  * COMAL-80 (#2180)
  * JMESPath (#2174, #2175, #2179, #2182)
  * Sql+Jinja (#2148)

- Updated lexers:

  * Ada: support Ada 2022 (#2121); disable recognition of namespaces
    because it disturbs lexing of aspects (#2125)
  * Agda: allow straight quotes in module names (#2163)
  * C family (C, C++ and many others): allow comments between
    elements of function headers, e.g. between the arguments and
    the opening brace for the body (#1891)
  * C++: Resolve several cases of ``Error`` tokens (#2207, #2208)
  * Coq: add some common keywords, improve recognition of ``Set``
    and qualified identifiers (#2158)
  * F*: Allow C-style comments anywhere in a line
  * Fortran: fix catastrophic backtracking with backslashes in strings
    (#2194)
  * Go: add support for generics (#2167)
  * Inform: update for version 6.40 (#2190)
  * Isabelle: recognize cartouches (#2089)
  * Java: support multiline strings aka. text blocks (#2132)
  * Kotlin: add ``value`` modifier (#2142)
  * LilyPond: add some missing builtins
  * Macaulay2: update builtins (#2139)
  * Matlab session: fix traceback when a line continuation ellipsis
    appears in the output (#2166)
  * .NET: add aliases for LibreOffice Basic, OpenOfficeBasic and
    StarOffice Basic (#2170)
  * Nim: use ``Name.Builtin`` instead of ``Keyword.Type`` (#2136)
  * PHP: fix `\"$var\"` inside strings (#2105)
  * Python: only recognize ``\N``, ``\u`` and ``\U`` escape sequences