@@ -40,25 +40,25 @@ class SpiceLexer(RegexLexer):
             (r'/(\\\n)?[*](.|\n)*?[*](\\\n)?/', Comment.Multiline),
             # keywords
             (r'(import|as)\b', Keyword.Namespace),
-            (r'(f|p|type|struct)\b', Keyword.Declaration),
+            (r'(f|p|type|struct|enum)\b', Keyword.Declaration),
             (words(('if', 'else', 'for', 'foreach', 'while', 'break', 'continue', 'return', 'assert', 'thread', 'unsafe', 'ext', 'dll'), suffix=r'\b'), Keyword),
             (words(('const', 'signed', 'unsigned', 'inline', 'public'), suffix=r'\b'), Keyword.Pseudo),
-            (words(('new', 'switch', 'case', 'yield', 'stash', 'pick', 'sync'), suffix=r'\b'), Keyword.Reserved),
+            (words(('new', 'switch', 'case', 'yield', 'stash', 'pick', 'sync', 'class'), suffix=r'\b'), Keyword.Reserved),
             (r'(true|false|nil)\b', Keyword.Constant),
             (words(('double', 'int', 'short', 'long', 'byte', 'char', 'string', 'bool', 'dyn'), suffix=r'\b'), Keyword.Type),
             (words(('printf', 'sizeof', 'len', 'tid', 'join'), suffix=r'\b(\()'), bygroups(Name.Builtin, Punctuation)),
             # numeric literals
-            (r'([0-9]*[.][0-9]+)', Number.Double),
-            (r'((0[dD])?[0-9]+[sl]?)', Number.Integer),
-            (r'(0[bB][01]+[sl]?)', Number.Bin),
-            (r'(0[oO][0-7]+[sl]?)', Number.Oct),
-            (r'(0[xXhH][0-9a-fA-F]+[sl]?)', Number.Hex),
+            (r'[0-9]*[.][0-9]+', Number.Double),
+            (r'0[bB][01]+[sl]?', Number.Bin),
+            (r'0[oO][0-7]+[sl]?', Number.Oct),
+            (r'0[xXhH][0-9a-fA-F]+[sl]?', Number.Hex),
+            (r'(0[dD])?[0-9]+[sl]?', Number.Integer),
             # string literal
             (r'"(\\\\|\\[^\\]|[^"\\])*"', String),
             # char literal
             (r'\'(\\\\|\\[^\\]|[^\'\\])\'', String.Char),
             # tokens
-            (r'(<<=|>>=|<<|>>|<=|>=|\+=|-=|\*=|/=|\%=|\|=|&=|\^=|&&|\|\||&|\||\+\+|--|\%|\^|\~|==|!=|[.]{3}|[+\-*/&])', Operator),
+            (r'<<=|>>=|<<|>>|<=|>=|\+=|-=|\*=|/=|\%=|\|=|&=|\^=|&&|\|\||&|\||\+\+|--|\%|\^|\~|==|!=|::|[.]{3}|[+\-*/&]', Operator),
             (r'[|<>=!()\[\]{}.,;:\?]', Punctuation),
             # identifiers
             (r'[^\W\d]\w*', Name.Other),
