@@ -19,6 +19,8 @@ Version 2.14.0
   * Inform 6: fix lexing of properties and doubles (#2214)
   * NASM: add support for SSE/AVX/AVX-512 registers as well as 'rel'
     and 'abs' address operators (#2212)
+  * Spice: add ``enum`` keyword and fix a bug regarding binary,
+    hexadecimal and octal number tokens (#2227)
 
 - Fix `make mapfiles` when Pygments is not installed in editable mode
   (#2223)
